# zerobase-python

./: .gitignore  README.md  pyproject.toml  test_main.py  zerobase.py
docs/: README.md  index.md
docs/examples/: basic.py  multi_transport_advanced.py  multi_transport_basic.py
docs/reference/: zerobase.md
docs/reference/configs/: zerobasepubconfig.md  zerobasesubconfig.md
docs/reference/sockets/: zerobasepubsocket.md  zerobasesubsocket.md
zerobase/: zerobase.py
zerobase/tests/: test_main.py
