[build-system]
requires = ["setuptools>=61.0", "pyzmq>=25.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zerobase"
version = "0.0.3"
authors = [
  { name="Augusto Mota Pinheiro", email="augustomp55@gmail.com" },
]
description = "A communications framework based on ZeroMQ for multiprocessing systems!"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Nanostride/zerobase-python"
"Bug Tracker" = "https://github.com/Nanostride/zerobase-python/issues"